# wasm-ssh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
examples/cloudflare-worker-exec/: index.js  wrangler.toml
examples/cloudflare-worker-terminal/: index.js  wrangler.toml
src/: client.ts  cloudflare.ts  errors.ts  index.ts  node-adapter.ts  socket-connect.ts  types.ts  wasm-init.ts
ssh-core/: Cargo.toml
ssh-core-testkit/: Cargo.toml
ssh-core-testkit/src/: lib.rs
ssh-core-testkit/tests/: end_to_end.rs
ssh-core/src/: error.rs  event.rs  ident.rs  lib.rs  rng.rs  session.rs  wire.rs
ssh-core/src/auth/: mod.rs  password.rs  publickey.rs
ssh-core/src/connection/: channel.rs  exec.rs  mod.rs  pty.rs
ssh-core/src/transport/: hostkey.rs  kdf.rs  kex_curve25519.rs  kex_dh_group14.rs  kexinit.rs  mod.rs  packet.rs
ssh-core/testdata/: test_rsa_openssh.pem
tests/e2e/worker/: index.js  wrangler.toml
tests/integration/: run-password-auth-test.mjs
tests/integration/password-auth-worker/: index.js  wrangler.toml
tests/unit/: errors.test.ts
wasm-ssh-bindgen/: Cargo.toml
wasm-ssh-bindgen/src/: lib.rs
wasm-ssh-bindgen/testdata/: test_rsa_pkcs1.pem  test_rsa_pkcs8.pem
